syntax = "proto3";

package Msg;

message Food{//食物
    int32 id = 1;
    float posX = 2;
    float posY = 3;
    float bg = 4;
    float size = 5; 
};

//服务器消息-----------------------------------------
enum ServerOrder{
    SERVERORDER_MAP_INIT = 0;   //地图初始化
    SERVERORDER_MAP_UPDATE = 1; //更新地图食物
};

message MapInit{//初始化地图
    int32 FOODS_NUM = 1;//总数
    repeated Food food = 2;//位置
};

message Update{//更新地图
    int32 food_id = 1;//要更新的食物id
    Food food = 2;//新的食物信息
};

message ServerMessage{
    ServerOrder order = 1;
    MapInit map = 2;
    Update update = 3;
};


//客户端消息-----------------------------------------

enum ClientOrder{
    CLIENTORDER_FOOD_EAT = 0;   //地图初始化
};

message ClientMessage{
    ClientOrder order = 1;
    Food food = 2;
};